--- a/app/views/admin/pages/_actions_column.html.haml
+++ b/app/views/admin/pages/_actions_column.html.haml
@@ -1,5 +1,6 @@
 - include_javascript 'admin/dropdown'
-%td.actions
-  = child_link_for(page)
-  = link_to image('minus') + ' ' + t('remove'), remove_admin_page_url(page), :class => "action"
-  = child_menu_for(page)
+- unless simple
+  %td.actions
+    = child_link_for(page)
+    = link_to image('minus') + ' ' + t('remove'), remove_admin_page_url(page), :class => "action"
+    = child_menu_for(page)
